<resources>
    <string name="app_name">RemoteBus</string>
    <string name="login_title">Login</string>
    <string name="text_username">Email</string>
    <string name="text_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_createAccount">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_name">Username</string>
    <string name="title_activity_track">Map</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
